<resources>
    <string name="app_name">Jedzonko.pl</string>
    <string name="nav_item_recipes">Przepisy</string>
    <string name="nav_item_search">Szukaj</string>
    <string name="nav_item_slist">Zakupy</string>
    <string name="nav_item_account">Konto</string>
    <string name="nav_item_shops">Sklepy</string>
    <string name="title_recipes">Przepisy</string>
    <string name="title_search">Szukaj</string>
    <string name="title_slist">Listy zakupów</string>
    <string name="title_account">Konto</string>
    <string name="title_shops">Znajdź w pobliżu</string>
    <string name="title_add_slist">Dodaj listę</string>
    <string name="open_add_recipe_view_button">Otwórz widok dodawania przepisu</string>
    <string name="open_camera_view_button">Otwórz widok kamery</string>
    <string name="add_recipes_title">Dodaj przepis</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera_view_take_picture_button">Zrób zdjęcie</string>
    <string name="camera_photo_captured_info">Zrobiono zdjęcie</string>
    <string name="permission_not_granted">Nie przyznano uprawnień</string>
    <string name="missing_input_data">Nie wprowadzono wszystkich danych</string>
    <string name="save_recipe">Zapisz przepis</string>
    <string name="go_back">Powrót</string>
    <string name="search_button">Wyszukaj</string>
    <string name="search_recipe">Wyszukaj przepis</string>
    <string name="save_button">Zapisz</string>
    <string name="edit_text_name_field">Nazwa</string>
    <string name="shopping_list_product_header">Produkty:</string>
    <string name="shopping_list_edit_products_button">Edytuj produkty</string>
    <string name="title_register_account">Zarejestruj się</string>
    <string name="edit_recipe">Edytuj przepis</string>
    <string name="camera_barcode_scanned">Skanowanie udane</string>
    <string name="save_product">Zapisz produkt</string>
    <string name="share_recipe">Udostępnij przepis</string>
    <string name="edit_account">Edytuj konto</string>
    <string name="account_logout">Wyloguj</string>
    <string name="shopping_bluetooth">Odbierz przez Bluetooth</string>
    <string name="title_bluetooth_slist">Odbierz listę zakupów</string>
    <string name="save_slist">Zapisz listę</string>
    <string name="send_bluetooth">Wyślij przez Bluetooth</string>
    <string name="edit_slist">Edytuj listę</string>
    <string name="sort_recipes">Sort</string>
    <string name="dialog_sort_title">Sortowanie</string>
    <string name="sort_creation_date">Data Utworzenia</string>
    <string name="sort_rating">Ocena</string>
    <string name="sort_ascending">Rosnąco</string>
    <string name="sort_descending">Malejąco</string>
    <string name="sort_order">Kolejność</string>
    <string name="sort_property">Właściwość</string>
    <string name="confirm">Zatwierdź</string>
    <string name="clear">Wyczyść</string>
    <string name="sort_nothing">Nic</string>
    <string name="sort_title">Tytuł</string>
    <string name="dialog_add_tag">Dodaj tag</string>
    <string name="dialog_add_product">Dodaj produkt</string>
    <string name="add_ingredients_button">Dodaj składniki</string>
    <string name="couldnt_load_image_from_gallery">Nie udało się załadować zdjęcia z galerii</string>
    <string name="service_connect_error">Błąd połączenia z serwisem</string>
    <string name="example_text">Przykład</string>
    <string name="account_register">Zarejestruj się</string>
    <string name="account_consent">Zgadzam się na wszystko</string>
    <string name="account_repeat_password">Powtórz hasło</string>
    <string name="account_password">Hasło</string>
    <string name="account_email">Email</string>
    <string name="content_application_logo">Logo aplikacji</string>
    <string name="account_ad_pitch">Uzyskaj więcej możliwości poprzez zalogowanie na swoje konto</string>
    <string name="account_forgot_password">Nie pamiętasz hasła?</string>
    <string name="account_login">Zaloguj się</string>
    <string name="account_create_account">Nie posiadasz konta? Zarejestruj się!</string>
    <string name="account_first_name">Imię</string>
    <string name="account_last_name">Nazwisko</string>
    <string name="account_delete">Usuń konto</string>
    <string name="account_delete_success">Konto zostało usunięte</string>
    <string name="account_delete_dialog_title">Czy chcesz usunąć konto?</string>
    <string name="account_delete_dialog_cancel">Anuluj</string>
    <string name="account_delete_dialog_confirm">Usuń</string>
    <string name="account_register_no_consent">Trzeba się zgodzić</string>
    <string name="account_register_password_too_short">Hasło musi posiadać minimum 8 znaków</string>
    <string name="account_register_password_not_match">Hasła nie są identyczne</string>
    <string name="account_register_email_not_valid">Email nie jest poprawny</string>
    <string name="account_register_thanks">Dziękujemy za rejestrację! Mail aktywacyjny został wysłany.</string>
    <string name="account_recovery_recoveryButton">Resetuj hasło</string>
    <string name="account_recovery_start">Wysłano maila z tokenem</string>
    <string name="title_register_recovery">Resetuj hasło</string>
    <string name="title_reset_account">Zmień hasło</string>
    <string name="account_reset_token">Token</string>
    <string name="account_reset_change_password">Zmień hasło</string>
    <string name="account_reset_success">Hasło zostało zmienione</string>
    <string name="account_recovery_not_found">Konta nie znaleziono</string>
    <string name="account_invalid_data">Podano zły email lub hasło</string>
    <string name="account_reset_wrong_token">Czas na wpisanie tokenu minął lub podano błędny</string>
    <string name="delete_recipe">Usuń</string>
    <string name="dialog_delete_recipe_title">Usuwanie przepisu</string>
    <string name="dialog_delete_recipe_message">Czy na pewno chcesz usunąć ten przepis? Ta operacja jest nieodwracalna.</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="delete_confirm">Usuń</string>
    <string name="delete_not_confirm">Nie usuwaj</string>
</resources>