<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit_profile"
        android:title="@string/edit_account"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="0"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/account_logout"
        android:enabled="true"
        android:icon="@drawable/ic_logout"
        android:orderInCategory="0"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/account_delete"
        android:enabled="true"
        android:icon="@drawable/ic_remove_account"
        android:orderInCategory="0"
        app:showAsAction="never" />

</menu>