<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share_recipe"
        android:title="@string/share_recipe"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="0"
        app:showAsAction="always"
        android:visible="false"/>
    <item
        android:id="@+id/action_edit_recipe"
        android:title="@string/edit_recipe"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="0"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete_recipe"
        android:title="@string/delete_recipe"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="0"
        app:showAsAction="ifRoom" />
</menu>