<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_add_tag_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/account_delete_dialog_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_delete_dialog_title"
        android:textColor="#16B60A"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/account_delete_dialog_cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/account_delete_dialog_cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/account_delete_dialog_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/account_delete_dialog_confirm_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_delete_dialog_title_textView" />


    <Button
        android:id="@+id/account_delete_dialog_confirm_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/account_delete_dialog_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/account_delete_dialog_cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/account_delete_dialog_title_textView" />


</androidx.constraintlayout.widget.ConstraintLayout>